1.3.0 (04-07-2024)
- Improvement: Excludes old ooxml-schemas dependency [#qubIT-Omnis-6199]

1.2.1 (12-06-2023)
- Improvement: Upgrading joda time dependency

1.2.0 (28-04-2023)
- Refactor: Changed odfdom dependency for a hacked jar so xerces is no longer in the classpath

1.1.0 (05-03-2020)
- New feature: Support for Java 11

1.0.1 (dd-MM-2015)

1.0.0 (30-03-2015)
 - Document generation tool built on top of xdocreports. This tool was extracted from qubEdu-module-documents.
 - Minor adjustment: naming conformity.