@@ -19,7 +19,7 @@
         <dependency>
             <groupId>com.google.guava</groupId>
             <artifactId>guava</artifactId>
-            <version>14.0.1</version>
+            <version>33.2.1-jre</version>
         </dependency>
         <dependency>
             <groupId>joda-time</groupId>
