@@ -1,3 +1,5 @@
+- Refactor: Making compatible with new Guava API [#qubIT-Omnis-5869]
+
 1.3.0 (04-07-2024)
 - Improvement: Excludes old ooxml-schemas dependency [#qubIT-Omnis-6199]
 
